# OOP_QT_Project

./: CMakeLists.txt  application.cpp  application.h  common.cpp  common.h  communicator.cpp  communicator.h  complex.cpp  complex.h  interface.cpp  interface.h  main.cpp  polynom.cpp  polynom.h
client/: application.cpp  application.h  interface.cpp  interface.h  main.cpp  sinplotter.cpp  sinplotter.h  siplotter.cpp  siplotter.h
common/: common.cpp  common.h  communicator.cpp
server/: application.cpp  application.h  array.h  complex.cpp  functions.h  main.cpp  polynom.cpp  polynom.h
